example-rules.v6
#
#*nat
#:PREROUTING ACCEPT [0:0]
#:INPUT ACCEPT [0:0]
#:OUTPUT ACCEPT [0:0]
#:POSTROUTING ACCEPT [0:0]
# Example Source NAT
#-A POSTROUTING -s IP6/mask -o eth0 -j SNAT --to-source IP6
#COMMIT
#
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

#######

# Allow 3 way handshake
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# Drop syn flood
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
# Drop all invalid packets
-A INPUT -m conntrack --ctstate INVALID -j DROP
# Permit loopback
-A INPUT -i lo -j ACCEPT

# For SMURF attack protection
-A INPUT -p icmp6 -m icmp6 -m limit --limit 1/second -j ACCEPT

# Permit HTTP & HTTPS from any
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT

# Permit SSH from your IP's
#-A INPUT -s IP6/mask -p tcp -m tcp --dport 22 -j ACCEPT

# Permit FTP from any (remember comment or remove this)
#-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
#-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
#-A INPUT -p tcp --dport 49152:65534 -j ACCEPT

# Permit NAGIOS from TowerTravel
#-A INPUT -p tcp -m tcp --dport 5666 -s IP6 -j ACCEPT

# Log for PASAD
-A INPUT -j LOG --log-prefix "[NGO_FW LOG] "
# Default rule please dont delete 
-A INPUT -j DROP

#######

# Allow 3 way handshake
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# Drop all invalid packets
-A FORWARD -m conntrack --ctstate INVALID -j DROP
# Permit loopback
-A FORWARD -i lo -j ACCEPT
# For Source NAT example
#-A FORWARD -i eth0 -o eth0 -s IP6/mask -j ACCEPT

# Log for PASAD
-A FORWARD -j LOG --log-prefix "[NGO_FW LOG] "

# Default rule please dont delete 
# Reject any whit icmp message
-A FORWARD -j REJECT --reject-with icmp6-adm-prohibited

#######

# Allow 3 way handshake
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
# Drop syn flood
-A OUTPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
# Drop all invalid packets
-A OUTPUT -m state --state INVALID -j DROP
# Permit loopback
-A OUTPUT -o lo -j ACCEPT
# Permit all
-A OUTPUT -j ACCEPT
#######
COMMIT
